--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -42,7 +42,7 @@
                                 </li>
                                 <!--user links-->
                                 <li class="nav-item" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
-                                    <a class="nav-link text-white font-weight-bold" th:href="@{/user/purchases}">Purchases</a>
+                                    <a class="nav-link text-white font-weight-bold" th:href="@{/user/orders}">Orders</a>
                                 </li>
                                 <li class="nav-item dropdown" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
                                     <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">My Account</a><!--id="navbardrop"-->
