added dev-postgres profile

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -138,7 +138,7 @@
                                 </div>
                                 <!-- checkout button -->
                                 <form th:action="@{/user/checkout}" method="GET">
-                                    <button class="btn btn-outline-info btn-sm my-2 btn-block" type="submit">Checkout</button>
+                                    <button class="btn btn-outline-info btn-sm my-2 btn-block" id="purchase" type="submit">Checkout</button>
                                 </form>
                             </div>
                         </div>
